Privacy Notice Fix

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
     </footer>
 
     <!-- Privacy Notice -->
-    <div id="privacy-notice" class="privacy-notice" role="dialog" aria-labelledby="privacy-title" aria-hidden="true">
+    <div id="privacy-notice" class="privacy-notice" role="dialog" aria-labelledby="privacy-title" hidden>
         <div class="privacy-content">
             <h3 id="privacy-title">Your Privacy Matters</h3>
             <p>This website uses browser storage to remember your preferences and improve your experience. We collect:</p>
