Content Update test 1

--- a/index.html
+++ b/index.html
@@ -40,17 +40,27 @@
 
     <!-- Main Content -->
     <main>
-        <!-- Hero Section - Inclusive Community -->
+        <!-- Hero Section -->
         <section class="hero-section">
             <div class="container">
                 <div class="hero-content">
                     <div class="hero-text">
-                        <h2>Welcome to CU Nordic Ski Club</h2>
-                        <p>The CU Nordic Ski Club is an inclusive community that welcomes skiers of all levels and backgrounds. Whether you're a seasoned racer or just curious about cross-country skiing, we provide a supportive environment where everyone can pursue their passion for Nordic skiing. Our club emphasizes both competitive excellence and recreational enjoyment, creating opportunities for personal growth, friendship, and adventure in the beautiful Colorado mountains.</p>
-                        <p>We believe that Nordic skiing is for everyone, and our diverse membership reflects that commitment. From structured training sessions to casual weekend outings, we offer programs that cater to various interests and skill levels. Join us to discover the joy of gliding through snow-covered trails and become part of a vibrant skiing community.</p>
+                        <h2>CU Boulder Nordic Ski Club</h2>
+                        <p>The CU Boulder Nordic Ski Club is a student organization at the University of Colorado Boulder dedicated to promoting cross-country skiing in a fun and inclusive environment. Whether you are new to the sport or a seasoned skier, the club provides opportunities for all skill levels to enjoy Nordic skiing, both recreationally and competitively.</p>
+                        
+                        <h3 style="margin-top: 2rem; margin-bottom: 1rem; font-size: 1.5rem;">Our Mission</h3>
+                        <p>At the CU Boulder Nordic Ski Club, we're building a powerful, inclusive space where every skier can thrive — from first-timers to seasoned racers.</p>
+                        <p style="margin-bottom: 0.5rem;"><strong>We're here to:</strong></p>
+                        <ul style="list-style-position: inside; margin-bottom: 1rem; line-height: 1.8;">
+                            <li>Teach Nordic skiing (cross-country)</li>
+                            <li>Elevate athletic potential — recreational or competitive</li>
+                            <li>Create lasting connections and unforgettable experiences through organized trips, team events, and races</li>
+                        </ul>
+                        <p style="margin-bottom: 0.5rem;">• We unite passionate individuals in a positive, driven, and supportive environment</p>
+                        <p>• No experience? No problem. All are welcome.</p>
                     </div>
                     <div class="hero-image">
-                        <img src="images/skier-cu-snow.jpg" alt="Skier gliding past CU Boulder drawn in snow" loading="lazy">
+                        <img src="images/thrills-on-snow.jpg" alt="Nordic skier on snowy trails" loading="lazy">
                     </div>
                 </div>
             </div>
@@ -71,6 +81,11 @@
 
         <!-- Video Section -->
         <section class="video-section">
+            <div class="container">
+                <p style="text-align: center; font-size: 1.125rem; color: var(--cu-gray); margin-bottom: 2rem; max-width: 800px; margin-left: auto; margin-right: auto;">
+                    Whether you're aiming to race in USCSA-sanctioned events or just looking to ski for fun, the CU Boulder Nordic Ski Club offers an engaging, supportive environment where everyone feels welcome and included
+                </p>
+            </div>
             <div class="video-container">
                 <video controls poster="images/video-poster.jpg" aria-label="Nordic skiers skiing down a mountain">
                     <source src="videos/skiing-action.mp4" type="video/mp4">
