Image and video added

--- a/about.html
+++ b/about.html
@@ -64,7 +64,7 @@
                         <p>Whether you are new to Nordic skiing or an experienced racer, the CU Boulder Nordic Ski Club offers a welcoming and open-minded community where everyone can enjoy the sport, challenge themselves, and connect with fellow skiers. Join us as we explore the world of Nordic skiing, build lasting friendships, and make unforgettable memories on the trails!</p>
                     </div>
                     <div class="column-image">
-                        <img src="images/about-club-photo.jpg" alt="CU Nordic Ski Club members" loading="lazy">
+                        <img src="images/flag-about.jpg" alt="CU Nordic Ski Club flag waving in the mountain breeze" loading="lazy">
                     </div>
                 </div>
             </div>
@@ -92,7 +92,7 @@
                 </ul>
             </div>
             <div class="footer-logo">
-                <img src="images/club-logo.png" alt="CU Nordic Ski Club Logo" loading="lazy">
+                <img src="images/club-logo.png" alt="CU Nordic Ski Club Logo - Black and gold graphic of a skating skier" loading="lazy">
             </div>
         </div>
     </footer>
