--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                         <p>• No experience? No problem. All are welcome.</p>
                     </div>
                     <div class="hero-image">
-                        <img src="images/thrills-on-snow.jpg" alt="Nordic skier on snowy trails" loading="lazy">
+                        <img src="images/skier-cu-snow.jpg" alt="Nordic skier gracefully gliding past CU Boulder logo drawn in snow" loading="lazy">
                     </div>
                 </div>
             </div>
