--- a/support.html
+++ b/support.html
@@ -122,7 +122,7 @@
                 </ul>
             </div>
             <div class="footer-logo">
-                <img src="images/club-logo.png" alt="CU Nordic Ski Club Logo" loading="lazy">
+                <img src="images/club-logo.png" alt="CU Nordic Ski Club Logo - Black and gold graphic of a skating skier" loading="lazy">
             </div>
         </div>
     </footer>
