--- a/team.html
+++ b/team.html
@@ -55,29 +55,55 @@
             <div class="container">
                 <h2 style="text-align: center; margin-bottom: 3rem;">Executive Board</h2>
                 <div class="team-grid">
-                    <!-- Team Member Template - Add actual team members here -->
                     <div class="team-member">
-                        <img src="images/team/member1.jpg" alt="Team member photo" loading="lazy">
-                        <h3>[Name]</h3>
-                        <p class="role">[Position]</p>
+                        <img src="images/team/annika-officer.jpg" alt="Annika Beighey - Club President, leading with passion and dedication" loading="lazy">
+                        <h3>Annika Beighey</h3>
+                        <p class="role">President</p>
+                        <p><strong>Hometown:</strong> Fort Collins, CO</p>
+                        <p><strong>Major:</strong> Neuroscience and Applied Math</p>
+                        <p><strong>Favorite Ski Memory:</strong> Last day at Nationals at Mt. Bachelor</p>
+                        <p><strong>Favorite Hype Song:</strong> All of the Lights by Kanye West</p>
+                    </div>
+                    
+                    <div class="team-member">
+                        <img src="images/team/madi-officer.jpg" alt="Madelyn Meyer - Vice President, fostering community and growth" loading="lazy">
+                        <h3>Madelyn Meyer</h3>
+                        <p class="role">Vice President</p>
                         <p><strong>Hometown:</strong> Fort Collins, CO</p>
                         <p><strong>Major:</strong> Environmental Studies and Evolutionary Biology</p>
                         <p><strong>Favorite Ski Memory:</strong> Overnight trips at Snow Mountain Ranch</p>
                         <p><strong>Favorite Hype Song:</strong> Soul Rebel by Aphrodisiac Soundsystem</p>
                     </div>
-                    
-                    <!-- Add more team members by copying the structure above -->
-                    <!-- Example additional member:
+
                     <div class="team-member">
-                        <img src="images/team/member2.jpg" alt="Team member photo" loading="lazy">
-                        <h3>[Name]</h3>
-                        <p class="role">[Position]</p>
-                        <p><strong>Hometown:</strong> [Hometown]</p>
-                        <p><strong>Major:</strong> [Major]</p>
-                        <p><strong>Favorite Ski Memory:</strong> [Memory]</p>
-                        <p><strong>Favorite Hype Song:</strong> [Song]</p>
+                        <img src="images/team/ewan-officer.jpg" alt="Ewan Gallagher - Director of Internal Affairs, coordinating club operations" loading="lazy">
+                        <h3>Ewan Gallagher</h3>
+                        <p class="role">Director of Internal Affairs</p>
+                        <p><strong>Hometown:</strong> Winter Park, CO</p>
+                        <p><strong>Major:</strong> Political Science and International Affairs</p>
+                        <p><strong>Favorite Ski Memory:</strong> Last day at Mt. Bachelor for Nationals</p>
+                        <p><strong>Favorite Hype Song:</strong> Jordan Belfort by Wes Walker</p>
                     </div>
-                    -->
+
+                    <div class="team-member">
+                        <img src="images/team/callie-officer.jpg" alt="Callie O'Connell - Social Media Director, capturing club moments" loading="lazy">
+                        <h3>Callie O'Connell</h3>
+                        <p class="role">Social Media Director</p>
+                        <p><strong>Hometown:</strong> Rockville Centre, NY</p>
+                        <p><strong>Major:</strong> International Affairs and Political Science</p>
+                        <p><strong>Favorite Ski Memory:</strong> Talking about the Grand Tetons</p>
+                        <p><strong>Favorite Hype Song:</strong> All Night Longer by Sammy Adams</p>
+                    </div>
+
+                    <div class="team-member">
+                        <img src="images/team/azucena-officer.jpg" alt="Azucena Flores - Social Media Director, sharing club stories" loading="lazy">
+                        <h3>Azucena Flores</h3>
+                        <p class="role">Social Media Director</p>
+                        <p><strong>Hometown:</strong> Oaxaca, Mexico</p>
+                        <p><strong>Major:</strong> Neuroscience and Psychology</p>
+                        <p><strong>Favorite Ski Memory:</strong> The first overnight trip and first Eldora day trip!</p>
+                        <p><strong>Favorite Hype Song:</strong> LET HER COOK by GloRilla</p>
+                    </div>
                 </div>
             </div>
         </section>
@@ -115,7 +141,7 @@
                 </ul>
             </div>
             <div class="footer-logo">
-                <img src="images/club-logo.png" alt="CU Nordic Ski Club Logo" loading="lazy">
+                <img src="images/club-logo.png" alt="CU Nordic Ski Club Logo - Black and gold graphic of a skating skier" loading="lazy">
             </div>
         </div>
     </footer>
