--- a/index.html
+++ b/index.html
@@ -82,15 +82,22 @@
         <!-- Video Section -->
         <section class="video-section">
             <div class="container">
-                <p style="text-align: center; font-size: 1.125rem; color: var(--cu-gray); margin-bottom: 2rem; max-width: 800px; margin-left: auto; margin-right: auto;">
+                <p style="text-align: center; font-size: 1.125rem; color: var(--cu-black); margin-bottom: 2rem; max-width: 800px; margin-left: auto; margin-right: auto; font-weight: bold;">
                     Whether you're aiming to race in USCSA-sanctioned events or just looking to ski for fun, the CU Boulder Nordic Ski Club offers an engaging, supportive environment where everyone feels welcome and included
                 </p>
             </div>
             <div class="video-container">
-                <video controls poster="images/video-poster.jpg" aria-label="Nordic skiers skiing down a mountain">
-                    <source src="videos/skiing-action.mp4" type="video/mp4">
-                    <track kind="captions" src="captions/skiing-action.vtt" srclang="en" label="English">
-                    Your browser does not support the video tag.
+                <video 
+                    controls 
+                    poster="images/video-poster.jpg" 
+                    aria-label="Nordic skiers skiing down a mountain"
+                    preload="auto"
+                    playsinline
+                    controlsList="nodownload"
+                    class="video-player"
+                >
+                    <source src="images/skiing-action-vid.mp4" type="video/mp4">
+                    <p>Your browser does not support HTML5 video. Here's a <a href="images/skiing-action-vid.mp4">link to the video</a> instead.</p>
                 </video>
             </div>
         </section>
@@ -99,7 +106,11 @@
     <!-- Footer -->
     <footer class="site-footer">
         <div class="container footer-content">
+            <div class="footer-logo">
+                <img src="images/club-logo.png" alt="CU Nordic Ski Club Logo - Black and gold graphic of a skating skier" loading="lazy">
+            </div>
             <div class="footer-info">
+                <img src="images/be-boulder-black.svg" alt="BE BOULDER" class="be-boulder-logo" style="max-width: 200px; margin: 0 auto var(--spacing-md) auto; display: block;">
                 <h3>Contact Us</h3>
                 <ul class="contact-list">
                     <li>
@@ -111,13 +122,10 @@
                         <span>2055 Regent Dr, Boulder, CO 80309, USA</span>
                     </li>
                     <li>
-                        <span class="contact-label">Instagram:</span>
-                        <a href="https://instagram.com/cunordicskiclub" target="_blank" rel="noopener noreferrer">@cunordicskiclub</a>
+                        <span class="contact-label">Social:</span>
+                        <a href="https://www.instagram.com/cu.nordicski/">@cu.nordicski</a>
                     </li>
                 </ul>
-            </div>
-            <div class="footer-logo">
-                <img src="images/club-logo.png" alt="CU Nordic Ski Club Logo - Black and gold graphic of a skating skier" loading="lazy">
             </div>
         </div>
     </footer>
