--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
             <div class="container">
                 <div class="banner-content">
                     <h2 class="banner-title">A Community of Ski Enthusiasts</h2>
+                    <p class="banner-text">Whether you're aiming to race in USCSA-sanctioned events or just looking to ski for fun, the CU Boulder Nordic Ski Club offers an engaging, supportive environment where everyone feels welcome and included.</p>
                     <div class="banner-images">
                         <img src="images/racing-skier.jpg" alt="Nordic ski racers competing" class="banner-img-1" loading="lazy">
                         <img src="images/leisure-skiing.jpg" alt="Skiers enjoying a leisurely trail" class="banner-img-2" loading="lazy">
