Alt text and sizing

--- a/about.html
+++ b/about.html
@@ -1,8 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-                        <img src="images/flag-about.jpg" alt="CU Nordic Ski Club flag waving in the mountain breeze" loading="lazy">
+                        <img src="images/skiing-page.jpg" alt="Nordic skier gliding through pristine mountain terrain" style="width: 90%; margin-top: var(--spacing-lg); border-radius: 8px;" loading="lazy">
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>   <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About | CU Nordic Ski Club</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -64,7 +69,7 @@
                         <p>Whether you are new to Nordic skiing or an experienced racer, the CU Boulder Nordic Ski Club offers a welcoming and open-minded community where everyone can enjoy the sport, challenge themselves, and connect with fellow skiers. Join us as we explore the world of Nordic skiing, build lasting friendships, and make unforgettable memories on the trails!</p>
                     </div>
                     <div class="column-image">
-                        <img src="images/flag-about.jpg" alt="CU Nordic Ski Club flag waving in the mountain breeze" loading="lazy">
+                        <img src="images/flag-about.jpg" alt="CU Nordic Ski Club flag with black and gold colors waving against a snowy mountain backdrop" loading="lazy">
                     </div>
                 </div>
             </div>
