--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                         <p>• No experience? No problem. All are welcome.</p>
                     </div>
                     <div class="hero-image">
-                        <img src="images/skier-cu-snow.jpg" alt="Nordic skier gracefully gliding past CU Boulder logo drawn in snow" loading="lazy">
+                        <img src="images/skier-cu-snow.jpg" alt="Nordic skier in CU Boulder racing suit gliding through fresh snow with mountains in the background" loading="lazy">
                     </div>
                 </div>
             </div>
@@ -73,8 +73,8 @@
                     <h2 class="banner-title">A Community of Ski Enthusiasts</h2>
                     <p class="banner-text">Whether you're aiming to race in USCSA-sanctioned events or just looking to ski for fun, the CU Boulder Nordic Ski Club offers an engaging, supportive environment where everyone feels welcome and included.</p>
                     <div class="banner-images">
-                        <img src="images/racing-skier.jpg" alt="Nordic ski racers competing" class="banner-img-1" loading="lazy">
-                        <img src="images/leisure-skiing.jpg" alt="Skiers enjoying a leisurely trail" class="banner-img-2" loading="lazy">
+                        <img src="images/racing-skier.jpg" alt="Nordic ski racers in competitive stance during a cross-country race event" class="banner-img-1" loading="lazy">
+                        <img src="images/leisure-skiing.jpg" alt="Group of recreational skiers enjoying a scenic mountain trail on a sunny winter day" class="banner-img-2" loading="lazy">
                     </div>
                 </div>
             </div>
