--- a/join.html
+++ b/join.html
@@ -68,6 +68,13 @@
                 </div>
             </div>
         </section>
+
+        <!-- Join Club Image -->
+        <section class="content-section" style="background-color: var(--cu-light-gray); padding-bottom: var(--spacing-xl);">
+            <div class="container">
+                <img src="images/join-the-club.jpg" alt="CU Nordic Ski Club members enjoying a group skiing session in the mountains" style="width: 100%; max-height: 500px; object-fit: cover; border-radius: 8px; box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);" loading="lazy">
+            </div>
+        </section>
     </main>
 
     <!-- Footer -->
