--- a/skiing.html
+++ b/skiing.html
@@ -97,6 +97,13 @@
             </div>
         </section>
 
+        <!-- Racer Image Section -->
+        <section class="content-section">
+            <div class="container">
+                <img src="images/racer-about.jpg" alt="Nordic ski racer showing perfect skating technique on a groomed trail" style="width: 100%; max-height: 600px; object-fit: cover; border-radius: 8px; margin: var(--spacing-xl) 0;" loading="lazy">
+            </div>
+        </section>
+
         <!-- Additional Info Section -->
         <section class="content-section" style="background-color: var(--cu-light-gray);">
             <div class="container">
