Image layout and color fix

--- a/skiing.html
+++ b/skiing.html
@@ -119,6 +119,9 @@
     <!-- Footer -->
     <footer class="site-footer">
         <div class="container footer-content">
+            <div class="footer-logo">
+                <img src="images/club-logo.png" alt="CU Nordic Ski Club Logo - Black and gold graphic of a skating skier" loading="lazy">
+            </div>
             <div class="footer-info">
                 <h3>Contact Us</h3>
                 <ul class="contact-list">
