--- a/about.html
+++ b/about.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-                        <img src="images/flag-about.jpg" alt="CU Nordic Ski Club flag waving in the mountain breeze" loading="lazy">
-                        <img src="images/skiing-page.jpg" alt="Nordic skier gliding through pristine mountain terrain" style="width: 90%; margin-top: var(--spacing-lg); border-radius: 8px;" loading="lazy">
+    <meta charset="UTF-                        <img src="images/flag-about.jpg" alt="CU Nordic Ski Club flag waving in the mountain breeze" style="width: 100%; margin-bottom: var(--spacing-lg); border-radius: 8px;" loading="lazy">
+                        <img src="images/skiing-page.jpg" alt="Nordic skier gliding through pristine mountain terrain" style="width: 85%; margin-left: auto; margin-right: auto; display: block; border-radius: 8px;" loading="lazy">
                     </div>
                 </div>
             </div>
@@ -79,6 +79,9 @@
     <!-- Footer -->
     <footer class="site-footer">
         <div class="container footer-content">
+            <div class="footer-logo">
+                <img src="images/club-logo.png" alt="CU Nordic Ski Club Logo - Black and gold graphic of a skating skier" loading="lazy">
+            </div>
             <div class="footer-info">
                 <h3>Contact Us</h3>
                 <ul class="contact-list">
