--- a/index.html
+++ b/index.html
@@ -40,27 +40,17 @@
 
     <!-- Main Content -->
     <main>
-        <!-- Hero Section -->
+        <!-- Hero Section - Inclusive Community -->
         <section class="hero-section">
             <div class="container">
                 <div class="hero-content">
                     <div class="hero-text">
-                        <h2>CU Boulder Nordic Ski Club</h2>
-                        <p>The CU Boulder Nordic Ski Club is a student organization at the University of Colorado Boulder dedicated to promoting cross-country skiing in a fun and inclusive environment. Whether you are new to the sport or a seasoned skier, the club provides opportunities for all skill levels to enjoy Nordic skiing, both recreationally and competitively.</p>
-                        
-                        <h3 style="margin-top: 2rem; margin-bottom: 1rem; font-size: 1.5rem;">Our Mission</h3>
-                        <p>At the CU Boulder Nordic Ski Club, we're building a powerful, inclusive space where every skier can thrive — from first-timers to seasoned racers.</p>
-                        <p style="margin-bottom: 0.5rem;"><strong>We're here to:</strong></p>
-                        <ul style="list-style-position: inside; margin-bottom: 1rem; line-height: 1.8;">
-                            <li>Teach Nordic skiing (cross-country)</li>
-                            <li>Elevate athletic potential — recreational or competitive</li>
-                            <li>Create lasting connections and unforgettable experiences through organized trips, team events, and races</li>
-                        </ul>
-                        <p style="margin-bottom: 0.5rem;">• We unite passionate individuals in a positive, driven, and supportive environment</p>
-                        <p>• No experience? No problem. All are welcome.</p>
+                        <h2>Welcome to CU Nordic Ski Club</h2>
+                        <p>The CU Nordic Ski Club is an inclusive community that welcomes skiers of all levels and backgrounds. Whether you're a seasoned racer or just curious about cross-country skiing, we provide a supportive environment where everyone can pursue their passion for Nordic skiing. Our club emphasizes both competitive excellence and recreational enjoyment, creating opportunities for personal growth, friendship, and adventure in the beautiful Colorado mountains.</p>
+                        <p>We believe that Nordic skiing is for everyone, and our diverse membership reflects that commitment. From structured training sessions to casual weekend outings, we offer programs that cater to various interests and skill levels. Join us to discover the joy of gliding through snow-covered trails and become part of a vibrant skiing community.</p>
                     </div>
                     <div class="hero-image">
-                        <img src="images/skier-cu-snow.jpg" alt="Nordic skier in CU Boulder racing suit gliding through fresh snow with mountains in the background" loading="lazy">
+                        <img src="images/skier-cu-snow.jpg" alt="Skier gliding past CU Boulder drawn in snow" loading="lazy">
                     </div>
                 </div>
             </div>
@@ -71,10 +61,9 @@
             <div class="container">
                 <div class="banner-content">
                     <h2 class="banner-title">A Community of Ski Enthusiasts</h2>
-                    <p class="banner-text">Whether you're aiming to race in USCSA-sanctioned events or just looking to ski for fun, the CU Boulder Nordic Ski Club offers an engaging, supportive environment where everyone feels welcome and included.</p>
                     <div class="banner-images">
-                        <img src="images/racing-skier.jpg" alt="Nordic ski racers in competitive stance during a cross-country race event" class="banner-img-1" loading="lazy">
-                        <img src="images/leisure-skiing.jpg" alt="Group of recreational skiers enjoying a scenic mountain trail on a sunny winter day" class="banner-img-2" loading="lazy">
+                        <img src="images/racing-skier.jpg" alt="Nordic ski racers competing" class="banner-img-1" loading="lazy">
+                        <img src="images/leisure-skiing.jpg" alt="Skiers enjoying a leisurely trail" class="banner-img-2" loading="lazy">
                     </div>
                 </div>
             </div>
@@ -82,23 +71,11 @@
 
         <!-- Video Section -->
         <section class="video-section">
-            <div class="container">
-                <p style="text-align: center; font-size: 1.125rem; color: var(--cu-black); margin-bottom: 2rem; max-width: 800px; margin-left: auto; margin-right: auto; font-weight: bold;">
-                    Whether you're aiming to race in USCSA-sanctioned events or just looking to ski for fun, the CU Boulder Nordic Ski Club offers an engaging, supportive environment where everyone feels welcome and included
-                </p>
-            </div>
             <div class="video-container">
-                <video 
-                    controls 
-                    poster="images/video-poster.jpg" 
-                    aria-label="Nordic skiers skiing down a mountain"
-                    preload="auto"
-                    playsinline
-                    controlsList="nodownload"
-                    class="video-player"
-                >
-                    <source src="images/skiing-action-vid.mp4" type="video/mp4">
-                    <p>Your browser does not support HTML5 video. Here's a <a href="images/skiing-action-vid.mp4">link to the video</a> instead.</p>
+                <video controls poster="images/video-poster.jpg" aria-label="Nordic skiers skiing down a mountain">
+                    <source src="videos/skiing-action.mp4" type="video/mp4">
+                    <track kind="captions" src="captions/skiing-action.vtt" srclang="en" label="English">
+                    Your browser does not support the video tag.
                 </video>
             </div>
         </section>
@@ -107,11 +84,7 @@
     <!-- Footer -->
     <footer class="site-footer">
         <div class="container footer-content">
-            <div class="footer-logo">
-                <img src="images/club-logo.png" alt="CU Nordic Ski Club Logo - Black and gold graphic of a skating skier" loading="lazy">
-            </div>
             <div class="footer-info">
-                <img src="images/be-boulder-black.svg" alt="BE BOULDER" class="be-boulder-logo" style="max-width: 200px; margin: 0 auto var(--spacing-md) auto; display: block;">
                 <h3>Contact Us</h3>
                 <ul class="contact-list">
                     <li>
@@ -123,16 +96,19 @@
                         <span>2055 Regent Dr, Boulder, CO 80309, USA</span>
                     </li>
                     <li>
-                        <span class="contact-label">Social:</span>
-                        <a href="https://www.instagram.com/cu.nordicski/">@cu.nordicski</a>
+                        <span class="contact-label">Instagram:</span>
+                        <a href="https://instagram.com/cunordicskiclub" target="_blank" rel="noopener noreferrer">@cunordicskiclub</a>
                     </li>
                 </ul>
+            </div>
+            <div class="footer-logo">
+                <img src="images/club-logo.png" alt="CU Nordic Ski Club Logo - Black and gold graphic of a skating skier" loading="lazy">
             </div>
         </div>
     </footer>
 
     <!-- Privacy Notice -->
-    <div id="privacy-notice" class="privacy-notice" role="dialog" aria-labelledby="privacy-title" hidden>
+    <div id="privacy-notice" class="privacy-notice" role="dialog" aria-labelledby="privacy-title" aria-hidden="true">
         <div class="privacy-content">
             <h3 id="privacy-title">Your Privacy Matters</h3>
             <p>This website uses browser storage to remember your preferences and improve your experience. We collect:</p>
