--- a/index.html
+++ b/index.html
@@ -40,8 +40,11 @@
 
     <!-- Main Content -->
     <main>
-        <!-- Hero Section -->
-        <section class="hero-section">
+        <!-- Hero Section with Portrait Image -->
+        <section class="hero-section hero-with-bg">
+            <div class="hero-image-bg">
+                <img src="images/skier-cu-snow.png" alt="Nordic skier on snowy trails" loading="eager">
+            </div>
             <div class="container">
                 <div class="hero-content">
                     <div class="hero-text">
@@ -59,9 +62,6 @@
                         <p style="margin-bottom: 0.5rem;">• We unite passionate individuals in a positive, driven, and supportive environment</p>
                         <p>• No experience? No problem. All are welcome.</p>
                     </div>
-                    <div class="hero-image">
-                        <img src="images/thrills-on-snow.jpg" alt="Nordic skier on snowy trails" loading="lazy">
-                    </div>
                 </div>
             </div>
         </section>
@@ -72,9 +72,12 @@
                 <div class="banner-content">
                     <h2 class="banner-title">A Community of Ski Enthusiasts</h2>
                     <div class="banner-images">
-                        <img src="images/racing-skier.jpg" alt="Nordic ski racers competing" class="banner-img-1" loading="lazy">
-                        <img src="images/leisure-skiing.jpg" alt="Skiers enjoying a leisurely trail" class="banner-img-2" loading="lazy">
+                        <img src="images/racing-skier.png" alt="Nordic ski racers competing" class="banner-img-1" loading="lazy">
+                        <img src="images/leisure-skiing.png" alt="Skiers enjoying a leisurely trail" class="banner-img-2" loading="lazy">
                     </div>
+                    <p class="banner-text">
+                        Whether you're aiming to race in USCSA-sanctioned events or just looking to ski for fun, the CU Boulder Nordic Ski Club offers an engaging, supportive environment where everyone feels welcome and included
+                    </p>
                 </div>
             </div>
         </section>
@@ -82,10 +85,6 @@
         <!-- Video Section -->
         <section class="video-section">
             <div class="container">
-                <p style="text-align: center; font-size: 1.125rem; color: var(--cu-gray); margin-bottom: 2rem; max-width: 800px; margin-left: auto; margin-right: auto;">
-                    Whether you're aiming to race in USCSA-sanctioned events or just looking to ski for fun, the CU Boulder Nordic Ski Club offers an engaging, supportive environment where everyone feels welcome and included
-                </p>
-            </div>
             <div class="video-container">
                 <video controls poster="images/video-poster.jpg" aria-label="Nordic skiers skiing down a mountain">
                     <source src="videos/skiing-action.mp4" type="video/mp4">
