--- a/skiing.html
+++ b/skiing.html
@@ -57,7 +57,7 @@
                     Whether you're looking to ski recreationally, compete in races, or join a collegiate team, we have programs for all levels. Click the buttons below to learn more about each program.
                 </p>
                 
-                <div class="content-grid" style="max-width: 900px; margin: 0 auto;">
+                <div class="skiing-programs-grid">
                     <div class="content-card" style="text-align: center; padding: 2rem;">
                         <h3 style="margin-bottom: 1rem; font-size: 1.75rem;">Ski Club</h3>
                         <p style="margin-bottom: 1.5rem;">Recreational skiing for all skill levels. Perfect for beginners and those looking to enjoy Nordic skiing in a fun, social environment.</p>
@@ -94,6 +94,13 @@
                         </a>
                     </div>
                 </div>
+            </div>
+        </section>
+
+        <!-- Racer Image Section -->
+        <section class="full-width-image-section">
+            <div class="container">
+                <img src="images/racer-about.png" alt="Competitive Nordic skier racing" class="skiing-page-image" loading="lazy">
             </div>
         </section>
 
