--- a/join.html
+++ b/join.html
@@ -68,6 +68,13 @@
                 </div>
             </div>
         </section>
+
+        <!-- Join Image Section -->
+        <section class="full-width-image-section">
+            <div class="container">
+                <img src="images/join-the-club.png" alt="Join CU Nordic Ski Club - Group of skiers" class="join-page-image" loading="lazy">
+            </div>
+        </section>
     </main>
 
     <!-- Footer -->
