--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <!-- Hero Section with Portrait Image -->
         <section class="hero-section hero-with-bg">
             <div class="hero-image-bg">
-                <img src="images/skier-cu-snow.png" alt="Nordic skier on snowy trails" loading="eager">
+                <img src="images/skier-cu-snow.jpg" alt="Nordic skier on snowy trails" loading="eager">
             </div>
             <div class="container">
                 <div class="hero-content">
@@ -72,8 +72,8 @@
                 <div class="banner-content">
                     <h2 class="banner-title">A Community of Ski Enthusiasts</h2>
                     <div class="banner-images">
-                        <img src="images/racing-skier.png" alt="Nordic ski racers competing" class="banner-img-1" loading="lazy">
-                        <img src="images/leisure-skiing.png" alt="Skiers enjoying a leisurely trail" class="banner-img-2" loading="lazy">
+                        <img src="images/racing-skier.jpg" alt="Nordic ski racers competing" class="banner-img-1" loading="lazy"
+                        <img src="images/leisure-skiing.jpg" alt="Skiers enjoying a leisurely trail" class="banner-img-2" loading="lazy">
                     </div>
                     <p class="banner-text">
                         Whether you're aiming to race in USCSA-sanctioned events or just looking to ski for fun, the CU Boulder Nordic Ski Club offers an engaging, supportive environment where everyone feels welcome and included
@@ -86,10 +86,9 @@
         <section class="video-section">
             <div class="container">
             <div class="video-container">
-                <video controls poster="images/video-poster.jpg" aria-label="Nordic skiers skiing down a mountain">
-                    <source src="videos/skiing-action.mp4" type="video/mp4">
-                    <track kind="captions" src="captions/skiing-action.vtt" srclang="en" label="English">
-                    Your browser does not support the video tag.
+                <video controls poster="images/video-poster.jpg" aria-label="Nordic skiers skiing down a mountain" preload="metadata">
+                    <source src="images/skiing-action-vid.mp4" type="video/mp4">
+                    Your browser does not support the video tag. Please upgrade your browser to view this content.
                 </video>
             </div>
         </section>
