--- a/skiing.html
+++ b/skiing.html
@@ -100,7 +100,7 @@
         <!-- Racer Image Section -->
         <section class="full-width-image-section">
             <div class="container">
-                <img src="images/racer-about.png" alt="Competitive Nordic skier racing" class="skiing-page-image" loading="lazy">
+                <img src="images/racer-about.jpg" alt="Competitive Nordic skier racing" class="skiing-page-image" loading="lazy">
             </div>
         </section>
 
