--- a/about.html
+++ b/about.html
@@ -64,7 +64,7 @@
                         <p>Whether you are new to Nordic skiing or an experienced racer, the CU Boulder Nordic Ski Club offers a welcoming and open-minded community where everyone can enjoy the sport, challenge themselves, and connect with fellow skiers. Join us as we explore the world of Nordic skiing, build lasting friendships, and make unforgettable memories on the trails!</p>
                     </div>
                     <div class="column-image">
-                        <img src="images/flag-about.png" alt="CU Nordic Ski Club members with flags" loading="lazy">
+                        <img src="images/flag-about.jpg" alt="CU Nordic Ski Club members with flags" loading="lazy">
                     </div>
                 </div>
             </div>
