--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <!-- Navigation Header -->
     <header class="site-header">
-        <nav class="main-nav" role="navigation" aria-label="Main navigation">
+        <nav class="main-nav" aria-label="Main navigation">
             <div class="nav-brand">
                 <img src="images/cu-logo.png" alt="University of Colorado Boulder Logo" class="cu-logo">
                 <div class="brand-text">
@@ -87,11 +87,13 @@
         <!-- Video Section -->
         <section class="video-section">
             <div class="container">
-            <div class="video-container">
-                <video controls poster="images/video-poster.jpg" aria-label="Nordic skiers skiing down a mountain" preload="metadata">
-                    <source src="images/skiing-action-vid.mp4" type="video/mp4">
-                    Your browser does not support the video tag. Please upgrade your browser to view this content.
-                </video>
+                <h2 class="sr-only">Featured Video</h2>
+                <div class="video-container">
+                    <video controls poster="images/video-poster.jpg" aria-label="Nordic skiers skiing down a mountain" preload="metadata">
+                        <source src="images/skiing-action-vid.mp4" type="video/mp4">
+                        Your browser does not support the video tag. Please upgrade your browser to view this content.
+                    </video>
+                </div>
             </div>
         </section>
     </main>
