Validation and banner fix

--- a/index.html
+++ b/index.html
@@ -2,7 +2,18 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name=        <!-- Video Section -->
+        <section class="video-section">
+            <div class="container">
+                <h2 class="sr-only">Featured Video</h2>
+                <div class="video-container">
+                    <video controls poster="images/video-poster.jpg" aria-label="Nordic skiers skiing down a mountain" preload="metadata">
+                        <source src="images/skiing-action-vid.mp4" type="video/mp4">
+                        Your browser does not support the video tag.
+                    </video>
+                </div>
+            </div>
+        </section> content="width=device-width, initial-scale=1.0">
     <title>CU Nordic Ski Club | University of Colorado Boulder</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -87,13 +98,11 @@
         <!-- Video Section -->
         <section class="video-section">
             <div class="container">
-                <h2 class="sr-only">Featured Video</h2>
-                <div class="video-container">
-                    <video controls poster="images/video-poster.jpg" aria-label="Nordic skiers skiing down a mountain" preload="metadata">
-                        <source src="images/skiing-action-vid.mp4" type="video/mp4">
-                        Your browser does not support the video tag. Please upgrade your browser to view this content.
-                    </video>
-                </div>
+            <div class="video-container">
+                <video controls poster="images/video-poster.jpg" aria-label="Nordic skiers skiing down a mountain" preload="metadata">
+                    <source src="images/skiing-action-vid.mp4" type="video/mp4">
+                    Your browser does not support the video tag. Please upgrade your browser to view this content.
+                </video>
             </div>
         </section>
     </main>
