--- a/join.html
+++ b/join.html
@@ -72,7 +72,7 @@
         <!-- Join Image Section -->
         <section class="full-width-image-section">
             <div class="container">
-                <img src="images/join-the-club.jpg" alt="Join CU Nordic Ski Club - Group of skiers" class="join-page-image" loading="lazy"
+                <img src="images/join-the-club.jpg" alt="Join CU Nordic Ski Club - Group of skiers" class="join-page-image" loading="lazy">
             </div>
         </section>
     </main>
