--- a/support.html
+++ b/support.html
@@ -132,6 +132,25 @@
         </div>
     </footer>
 
+        <!-- Privacy Notice -->
+    <div id="privacy-notice" class="privacy-notice" role="dialog" aria-labelledby="privacy-title" hidden>
+        <div class="privacy-content">
+            <h3 id="privacy-title">Your Privacy Matters</h3>
+            <p>This website uses browser storage to remember your preferences and improve your experience. We collect:</p>
+            <ul>
+                <li>Your navigation preferences (menu state)</li>
+                <li>Your consent preferences</li>
+            </ul>
+            <p>All data is stored locally on your device and is never sent to external servers. You have full control over your data.</p>
+            <div class="privacy-actions">
+                <button id="accept-privacy" class="btn btn-primary">Accept</button>
+                <button id="view-privacy" class="btn btn-secondary">View Full Privacy Statement</button>
+            </div>
+        </div>
+    </div>
+
     <script src="script.js"></script>
+</body>
+</html>
 </body>
 </html>
