--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
 </head>
 <body>
+    <!-- ⭐ ADD THIS: Skip to main content link -->
+    <a href="#main-content" class="skip-to-main">Skip to main content</a>
+    
     <!-- Navigation Header -->
     <header class="site-header">
         <nav class="main-nav" aria-label="Main navigation">
@@ -39,7 +42,8 @@
     </header>
 
     <!-- Main Content -->
-    <main>
+    <!-- ⭐ UPDATED: Added id="main-content" for skip link -->
+    <main id="main-content">
         <!-- Hero Section with Portrait Image -->
         <section class="hero-section hero-with-bg">
             <div class="hero-image-bg">
@@ -89,8 +93,11 @@
             <div class="container">
                 <h2 class="sr-only">Featured Video</h2>
                 <div class="video-container">
-                    <video controls poster="images/video-poster.jpg" aria-label="Nordic skiers skiing down a mountain" preload="metadata">
+                    <!-- ⭐ ENHANCED: Better video accessibility -->
+                    <video controls poster="images/video-poster.jpg" preload="metadata" aria-label="Nordic skiers skiing down a mountain">
                         <source src="images/skiing-action-vid.mp4" type="video/mp4">
+                        <!-- Optional: Add captions if video has dialogue -->
+                        <!-- <track kind="captions" src="captions/skiing-action-en.vtt" srclang="en" label="English" default> -->
                         Your browser does not support the video tag. Please upgrade your browser to view this content.
                     </video>
                 </div>
