Commenting and Footer fix

--- a/index.html
+++ b/index.html
@@ -42,19 +42,19 @@
 
     <!-- Main Content -->
     <main id="main-content">
-        <!-- Hero Section with Portrait Image -->
-        <section class="hero-section hero-with-bg">
-            <div class="hero-image-bg">
+        <!-- Portrait Image -->
+        <section class="portrait-section portrait-with-bg">
+            <div class="portrait-image-bg">
                 <img src="images/skier-cu-snow.jpg" alt="Nordic skier on snowy trails" loading="eager">
             </div>
             <div class="container">
-                <div class="hero-content">
-                    <div class="hero-text">
-                        <h2>CU Boulder Nordic Ski Club</h2>
+                <div class="portrait-content">
+                    <div class="portrait-text">
+                        <h2>CU Nordic Ski Club</h2>
                         <p>The CU Boulder Nordic Ski Club is a student organization at the University of Colorado Boulder dedicated to promoting cross-country skiing in a fun and inclusive environment. Whether you are new to the sport or a seasoned skier, the club provides opportunities for all skill levels to enjoy Nordic skiing, both recreationally and competitively.</p>
                         
                         <h3 style="margin-top: 2rem; margin-bottom: 1rem; font-size: 1.5rem;">Our Mission</h3>
-                        <p>At the CU Boulder Nordic Ski Club, we're building a powerful, inclusive space where every skier can thrive — from first-timers to seasoned racers.</p>
+                        <p>At the CU Boulder Nordic Ski Club, we're building a powerful, inclusive space where every skier can thrive — from first-timers to seasoned racers!</p>
                         <p style="margin-bottom: 0.5rem;"><strong>We're here to:</strong></p>
                         <ul style="list-style-position: inside; margin-bottom: 1rem; line-height: 1.8;">
                             <li>Teach Nordic skiing (cross-country)</li>
