Footer Logo fix

--- a/support.html
+++ b/support.html
@@ -106,7 +106,7 @@
         <div class="container footer-content">
             <!-- Logo Box - LEFT -->
             <div class="footer-logo-box">
-                <img src="images/club-logo.png" alt="CU Nordic Ski Club Logo - Black and gold graphic of a skating skier" loading="lazy">
+                <img src="images/club-logo.svg" alt="CU Nordic Ski Club Logo - Black and gold graphic of a skating skier" loading="lazy">
             </div>
             
             <!-- All Info - RIGHT -->
